--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
